style.css
/*
Theme Name: wp-oh-theme
Theme URI: https://github.com/OuachitaHillsMinistries/wp-oh-theme
Author: Ouachita Hills Ministries
Author URI: http://ouachitahills.org/
License: GNU General Public License
License URI: https://www.gnu.org/licenses/gpl.html
Version: 0.1.0
GitHub Theme URI: OuachitaHillsMinistries/wp-oh-theme
*/

html body {
	font-family: hk_grotesk, sans-serif;
}

#container {
	overflow: hidden;
	width: 100%;
}

/* === Header === */

.top-header {
	position: relative;
	padding-bottom: 3rem;
}

.top-header h2 {
	margin: 0;
}

.top-header h2 img {
	width: 7em;
	margin: .5em 5vw;
}

/* === Search === */

.searchform {
	background-color: white;
	height:30px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, .1);
	display:inline-block;
}

.searchform .form-group {
	height:100%;
	margin:-2px 0 0 0;
}

.searchform button {
	background:#e7e7e7;
	height:100%;
	padding:0 .5em;
}

.desktop .searchform * {
	display:inline-block;
}

.searchform * {
	border:none;
	background:transparent;
}

.searchform input,
.searchform input:focus {
	box-shadow:none;
	width:auto;
}

.top-header > .searchform {
	position: absolute;
	right: 5vw;
	top: 1.9em;
}

.top-header > .searchform input {
	width:75px;

	-webkit-transition: width .55s ease;
	-moz-transition: width .55s ease;
	-ms-transition: width .55s ease;
	-o-transition: width .55s ease;
	transition: width .55s ease;
}

.top-header > .searchform input:focus {
	width:200px;
}

/* === Desktop Nav === */

.ohNavbar {
	height:3rem;
	position:absolute;
	bottom:0;
	left:0;
	right:0;
	padding:0 5vw 0 5vw;
}

.ohNavbar.desktop.fixed {
	position:fixed;
	bottom:auto;
	top:0;
}

.ohNavbar > * {
	float:left;
	padding-left:0;
	margin:0;
	position:relative;
}

.ohNavbar li {
	list-style:none;
}

.ohNavbar a {
	padding:0 1rem;
	line-height:3rem;
	color:#e7e7e7;
	display:block;
	white-space: nowrap;
}

.section-selector > a {
	background-color:#e7e7e7;
}

.section-selector > a:focus {
	text-decoration:none;
}

.desktop .ohNav > li {
	float:left;
	list-style:none;
	position: relative;
}

.ohNavbar .section-selector > a,
.desktop .ohNav > li.page_item_has_children > a {
	padding-right:3rem;
	position:relative;
}

.section-selector > a:after,
.desktop .ohNav > li.page_item_has_children > a:after {
	font-family: 'dashicons', sans-serif;
	content:"\f347";
	position:absolute;
	right:1rem;
	top:.2rem;
}

.desktop .ohNav > li > a:focus,
.ohNavbar a:hover {
	background-color:#e7e7e7;
	text-decoration: none;
}

.section-selector > a:focus + ul,
.desktop .ohNav > li > a:focus + ul {
	visibility:visible;
}

.section-selector ul,
.desktop .ohNav li ul {
	visibility:hidden;
	transition: visibility 0.01s;
	padding-left:0;
	min-width:100%;
	position: absolute;
	top:3rem;
}

.desktop .ohNav ul a {
	display:block;
}

/* === Mobile Nav === */

.mobile .ohNav, .mobile .searchform {
	display:none;
	position: absolute;
	top:3rem;
	left:0;
	right:0;
	z-index:100;
	border-top:1px solid #e7e7e7;
	border-bottom:1px solid #e7e7e7;
	box-shadow: none;
}

.mobile .open + .ohNav {
	display:block;
}

.mobile .open + .searchform {
	display:block;
}

.mobile .searchform button {
	float:left;
	height:3rem;
}

.mobile .searchform span {
	display: block;
	overflow: hidden;
}

.mobile .searchform input {
	width:100%;
}

.ohNavbar .toggle {
	display:block;
	background-color:#e7e7e7;
	height:3rem;
	line-height:3rem;
	margin-left:1px;
	padding-left:3rem;
}

.ohNavbar .toggle:focus {
	text-decoration:none;
}

.ohNavbar .toggle span {
	line-height:3rem;
	position:absolute;
}

.ohNavbar .burger span,
.ohNavbar .toggle.open span {
	left:.5rem;
}

.ohNavbar .search-toggle span {
	left:.9rem;
}

.toggle.open span:before {
	font-family: 'dashicons', sans-serif;
	content: "\f335";
	font-size:20px;
}

.desktop .toggle,
.desktop .ohNavbar .searchform {
	display:none;
}

.mobile .ohNav > li {
	margin: 2rem 0;
}

.mobile .ohNav > li > a {
	padding:0 5vw;
}

.mobile .ohNav li li a {
	padding:0 5vw 0 10vw;
}

.mobile .ohNav ul {
	padding:0;
}

.mobile .ohNav .page_item_has_children > a:hover,
.mobile .ohNav .page_item_has_children > a:focus {
	cursor: default;
	background-color:transparent;
	color:#e7e7e7;
	text-decoration:none;
}

.mobile .ohNav .page_item_has_children > a {
	font-weight:bold;
	font-size:2rem;
}

/* === Section Colors === */

.top-header,
.nav-pills > li.active > a,
.section-selector ul,
.ohNavbar,
.ohNav li ul,
.ohNav {
	background: #3f3f3d;
}


.section-selector > a,
.ohNav > li > a:focus,
.ohNavbar a:hover,
.ohNavbar .toggle {
	color: #3f3f3d;
}

.academy .top-header,
.academy .nav-pills > li.active > a,
.start li a,
.academy .section-selector ul,
.academy .ohNavbar,
.academy .ohNav li ul,
.academy .ohNav {
	background: #23527c;
}

.academy .section-selector > a,
.academy .ohNav > li > a:focus,
.academy .ohNavbar a:hover,
.academy .ohNavbar .toggle {
	color: #23527c;
}

.mobile .searchform button {
	border-top:1px solid #23527c;
}

.college .top-header,
.college .nav-pills > li.active > a,
.college .container-fluid,
.college .section-selector ul,
.college .ohNavbar,
.college .ohNav li ul,
.college .ohNav {
	background: #2d5a3a;
}

.college .section-selector > a,
.college .ohNav > li > a:focus,
.college .ohNavbar a:hover,
.college .ohNavbar .toggle {
	color:#2d5a3a;
}

.mobile .searchform button {
	border-top:1px solid #2d5a3a;
}

/* === Home === */

html.home {
	height:100%;
}

body.home {
	text-align: center;
	background: transparent url('images/A.Background.jpg') no-repeat fixed 50% 50%;
	-webkit-background-size: cover;
	background-size: cover;
	display:flex;
	min-height:100%;
	margin-bottom:0;
}

.home .wrapper {
	display: table;
	max-width: 100%;
	margin: auto;
}

.start, .news {
	background-color: rgba(255, 255, 255, .7);
	margin-bottom: 1em;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, .1);
}

.start {
	padding: 3vw;
}

.start h1 {
	font-weight: bold;
	margin-bottom: 1em;
}

.start ul {
	padding: 0;
}

.start li {
	width: 50%;
	list-style: none;
	margin: .5em auto;
}

.start li a {
	padding: .5em;
	display: block;
	margin: 0 2px;
	text-decoration: none;
	opacity:.7;
	transition: opacity 0.2s ease;
	color:white;
}

.start li a:hover {
	text-decoration: none;
	opacity:1;
}

.news {
	padding: 10px 0;
	position: relative;
}

.unslider {
	overflow-y: hidden;
}

.unslider-arrow, .unslider-arrow:hover {
	top: .25em;
	font-size: 1.5em;
	z-index: 100;
	color: #337AB7;
	opacity: 0;
	transition: color 0.2s ease, opacity 0.2s ease;
}

.unslider:hover .unslider-arrow {
	opacity: 1;
}

.unslider .unslider-arrow:hover {
	color: #5AB51F;
}

.single ~ .unslider-arrow.next, .single ~ .unslider-arrow.prev {
	display: none;
}

.unslider-arrow.next {
	right: .25em;
}

.unslider-arrow.prev {
	left: .25em;
}

/* === Plural Posts === */

.plural {
	max-width:40em;
	margin-bottom:2em;
}

/* === Misc Pages === */

.single.post header, #content {
	margin: 5vw;
}

/* === Pages === */

#content:after {
	content: ".";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}

.jumbotron {
	background-position: 50% 25%;
	background-size: cover;
	height: 25vw;
	margin:-5vw -5vw 5vw -5vw;
}

.meta .entry-title {
	margin: 0 1em 0 0;
}

.subpages {
	margin: 2em 2em 2em 0;
	display: table;
}

.subpages.nav-pills li {
	margin-left:-15px;
}

.entry-content .text {
	-moz-column-width: auto;
	-webkit-column-width: auto;
	column-width: auto;

	margin: 0 0 4em 0;
	max-width: 40em;
	float: left;
	width: 100%;
}

.page-template-template-full-width .entry-content .text {
	max-width: none;
}

.entry-content .text > *:first-child {
	margin-top: 0;
	padding-top: 0;
}

.images {
	clear: both;
}

.images .slider {
	display: none;
	width: 100%;
	padding-bottom: 66%;
}

.images .slider a {
	display: block;
	text-align: center;
	height: 0;
}

.images .slider img {
	max-width: 100%;
}

.gallery ul {
	padding: 0;
}

.gallery li {
	display: inline-block;
}

.gallery a {
	margin: 0 .5em .5em 0;
}

.recent-posts {
	clear:both;
}

.recent-posts h2 {
	margin-bottom:1em;
}

.recent-posts ul {
	clear:both;
	padding:0 0 1em 0;
	display:flex;
	overflow:scroll;
}

.recent-posts li {
	display:inline-block;
	margin-bottom:10px;
}

.recent-posts a {
	display:block;
}

.recent-posts .thumbnail {
	width:160px;
	height:160px;
	display:flex;
	margin:0 10px 10px 0;
}

.recent-posts a:hover .thumbnail {
	border-color:#23527c;
}

.recent-posts .dashicons {
	margin:auto;
	font-size:40px;
	width:40px;
	height:40px;
}

.recent-posts a:hover {
	text-decoration: none;
}

.recent-posts a:hover .title {
	text-decoration: underline;
}

.recent-posts .more {
	height:160px;
	line-height:160px;
	width:100px;
	text-align:center;
}

/* === Footer === */

html {
	position: relative;
	min-height: 100%;
}

body {
	/* Margin bottom by footer height */
	margin-bottom: 3.5em;
}

.footer {
	padding: 1em 5vw;
	clear: both;
	position: absolute;
	bottom: 0;
	width: 100%;
	/* Set the fixed height of the footer here */
	height: 3.5em;
	color:white;
	background: #3f3f3d;
}

/* === Media Queries === */

@media all and (min-width: 45em) {
	.start li {
		width: auto;
		margin: .2em .1em;
		display: inline-block;
	}

	.meta {
		width: 20em;
		float: left;
	}

	.entry-content .text {
		margin-right: 6em;
	}
}

@media all and (min-width: 65.2em) {
	.images {
		margin-left:18em;
	}
}

@media all and (min-width: 85em) {
	.images {
		clear: none;
		overflow: hidden;
	}
}

/* === Fonts === */

@font-face {
	font-family: 'hk_grotesk';
	src: url('fonts/hkgrotesk/hkgrotesk-bold-webfont.eot');
	src: url('fonts/hkgrotesk/hkgrotesk-bold-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/hkgrotesk/hkgrotesk-bold-webfont.woff2') format('woff2'),
	url('fonts/hkgrotesk/hkgrotesk-bold-webfont.woff') format('woff'),
	url('fonts/hkgrotesk/hkgrotesk-bold-webfont.ttf') format('truetype'),
	url('fonts/hkgrotesk/hkgrotesk-bold-webfont.svg#hk_groteskbold') format('svg');
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: 'hk_grotesk';
	src: url('fonts/hkgrotesk/hkgrotesk-light-webfont.eot');
	src: url('fonts/hkgrotesk/hkgrotesk-light-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/hkgrotesk/hkgrotesk-light-webfont.woff2') format('woff2'),
	url('fonts/hkgrotesk/hkgrotesk-light-webfont.woff') format('woff'),
	url('fonts/hkgrotesk/hkgrotesk-light-webfont.ttf') format('truetype'),
	url('fonts/hkgrotesk/hkgrotesk-light-webfont.svg#hk_grotesklight') format('svg');
	font-weight: 100;
	font-style: normal;
}

@font-face {
	font-family: 'hk_grotesk';
	src: url('fonts/hkgrotesk/hkgrotesk-medium-webfont.eot');
	src: url('fonts/hkgrotesk/hkgrotesk-medium-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/hkgrotesk/hkgrotesk-medium-webfont.woff2') format('woff2'),
	url('fonts/hkgrotesk/hkgrotesk-medium-webfont.woff') format('woff'),
	url('fonts/hkgrotesk/hkgrotesk-medium-webfont.ttf') format('truetype'),
	url('fonts/hkgrotesk/hkgrotesk-medium-webfont.svg#hk_groteskmedium') format('svg');
	font-weight: 500;
	font-style: normal;
}

@font-face {
	font-family: 'hk_grotesk';
	src: url('fonts/hkgrotesk/hkgrotesk-regular-webfont.eot');
	src: url('fonts/hkgrotesk/hkgrotesk-regular-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/hkgrotesk/hkgrotesk-regular-webfont.woff2') format('woff2'),
	url('fonts/hkgrotesk/hkgrotesk-regular-webfont.woff') format('woff'),
	url('fonts/hkgrotesk/hkgrotesk-regular-webfont.ttf') format('truetype'),
	url('fonts/hkgrotesk/hkgrotesk-regular-webfont.svg#hk_groteskregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

